--- a/projeto-perfil/style.css
+++ b/projeto-perfil/style.css
@@ -20,7 +20,31 @@ body {
 h2 {
     margin-top: 10px;
 }
-
+hr {
+    height: 2px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.566);
+    margin:  25px auto 10px;
+    border: 1px solid rgba(0, 0, 0, 0.682);
+}
+.mainHeader {
+    display: flex;
+    justify-content: space-between;
+}
+.mainHeader button {
+    width: 50%;
+    background-color: #90A686;
+    border: none;
+    border-radius: 5px;
+    padding: 7px 0;
+    margin: 5px 0;
+    transition: 0.4s;
+    align-self: center;
+    font-weight: bold;
+}
+.mainHeader button:hover {
+    background-color: #6D8F6C;
+}
 main {
     overflow-y: auto;
     width: 50%;
@@ -32,9 +56,10 @@ main {
     box-shadow: 1px 1px 30px 1px #00000035;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 main::-webkit-scrollbar {
-    border-radius: 20px;
+    display: none;
 }
 .campo {
     display: flex;
@@ -46,7 +71,7 @@ main::-webkit-scrollbar {
     flex-wrap: wrap;
 }
 .imagem {
-    width: 70%;
+    width: 100%;
     height: 150px;
     border-radius: 10px;
     border: 1px solid #333;
@@ -126,9 +151,6 @@ li {
         flex-wrap: nowrap;
     }
     .campoNome, .campoFoto {
-        width: 100%;
-    }
-    .imagem {
         width: 100%;
     }
     
